[package]
name = "address_translation"
version = "0.2.0"
authors = ["Zhang Zongyu <zongyu@novazy.net>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/6-6-6/address_translation"
homepage = "https://github.com/6-6-6/address_translation"
description = "Some helpers for IPv6 Network Address Translation."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipnet = "2.11.0"
